Added more queries and fixed models to support them accordingly
